tests/paczka1/fuzzy1/49517833.err
Error in line 4: 1Bdf45b3E S782 60,5
Error in line 6: 1Bdf45b3E S884 23,05
Error in line 5: 1Bdf45b3E S884 11,5
Error in line 24: uIj9tqI A565 295,4
Error in line 9: S782 S782 64,5
Error in line 30: jUXLamTP A565 2,5
Error in line 10: uIBj9tqI A565 97,8
Error in line 40: Z8bF S865 43,20
